# statgen-mi

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  configure  configure.ac  environment.yaml  install-sh  libtool  statgen-mi-0.1.0.pc.in  statgen-mi-0.1.pc  statgen-mi-0.1.pc.in  statgen-mi.doxyfile  temp_config.h.in
.circleci/: config.yml
config/: config.yaml  manifest.tsv
examples/: example.sh  mi.imputeddataset.config  mi.imputeddataset.config.yaml  mi.program.config  mi.program.config.yaml  mi.queue.config  phenotype_data.tsv  result.combined_results.txt  test.gen  test.sample
fileinterface/: configure  fileinterface-1.0.pc  libtool
fileinterface/fileinterface/: config.h  fileinterface.h  fileinterface_reader.h  fileinterface_reader_bzip2.cc  fileinterface_reader_bzip2.h  fileinterface_reader_flat.cc  fileinterface_reader_flat.h  fileinterface_reader_gzip.cc  fileinterface_reader_gzip.h  fileinterface_reader_parent.h  fileinterface_writer.h  fileinterface_writer_bzip2.cc  fileinterface_writer_bzip2.h  fileinterface_writer_flat.cc  fileinterface_writer_flat.h  fileinterface_writer_gzip.cc  fileinterface_writer_gzip.h  fileinterface_writer_parent.h  helper.h  plinkbed.cc  plinkbed.h
schema/: config.schema.yaml
statgen-mi/: annotations.h  boost_random.cc  boost_random.h  cargs.cc  cargs.h  config_interpreter.cc  config_interpreter.h  custom_handlers.cc  custom_handlers.h  custom_handlers_emmaxkin.cc  custom_handlers_impute2.cc  custom_handlers_placeholder.cc  custom_handlers_plink.cc  custom_handlers_snptest.cc  custom_handlers_userdefined.cc  genotype_draw_methods.h  main.cc  mi_calculator.cc  mi_calculator.h  parameters.cc  parameters.h  prob_vector.cc  prob_vector.h  program_description.h  submission_formatter.cc  submission_formatter.h  transpose_matrix.cc  transpose_matrix.h  utilities.h
tests/: placeholder.test
workflow/: Snakefile
workflow/envs/: plink2.yaml  tabix.yaml
workflow/rules/: common.smk  minimac4.smk  phenotypes.smk  plink2.smk
workflow/scripts/: combine_analysis_output.py  construct_trait_file.py  draw_dataset.py
workflow/scripts/tests/: test_combine_analysis_output.py  test_construct_trait_file.py
